# ark_toolbox

./: .eslintrc.js  .gitignore  README.md  babel.config.js  nginx.conf  package-lock.json  package.json  tsconfig.json  vue.config.js
.github/workflows/: update_operator_infos.yml
docs/: CNAME  index.html
docs/css/: app.69131f69.css  app.d37d4f67.css  app.d4107a83.css  chunk-1c596c31.cf6b6ea8.css  chunk-vendors.5c379149.css  chunk-vendors.86664a61.css  chunk-vendors.cf7fbfee.css
docs/js/: OperatorDisplay.43f9e18b.js  OperatorDisplay.befdccb4.js  OperatorDisplay.d040ae5b.js  Recruit.25d0f8e4.js  Recruit.28f7ada7.js  Recruit.eb1f153b.js  app.047a54d0.js  app.06557549.js  app.0ce71e73.js  app.0e50cdf8.js  app.10a046ab.js  app.470186fd.js  app.4f1c455e.js  app.587f4017.js  app.5d792693.js  app.652eba4c.js  app.95647fa3.js  app.b7148025.js  app.cb38a647.js  chunk-1c596c31.2ce038fe.js  chunk-vendors.370d9150.js  chunk-vendors.61392d48.js  chunk-vendors.72caa8c0.js  chunk-vendors.a7f48f90.js  chunk-vendors.cd05d465.js  runtime.05a1c9c2.js  runtime.08d63361.js  runtime.35db0685.js  runtime.c4a8190e.js  runtime.e5970634.js  runtime.e7e90364.js  utilsvendor.8e7b1787.js  utilsvendor.f8dfe33e.js  vuevendor.1b61ad93.js  vuevendor.48c84011.js  vuevendor.fadf7369.js
public/: index.html
scraper/: .gitignore  def_operator.py  gen_tags.py  operators.json  operators_old.json  pyproject.toml  requirements.txt  tags.json  tags_list.txt  update.py
src/: App.vue  OperatorInfo.ts  lodashCombinations.ts  main.ts
src/assets/: favicon.png:Zone.Identifier  operators.json
(+5 files in other folders)
