[tool.poetry]
name = "ark_wiki_scraper"
version = "0.1.0"
description = ""
authors = ["j4ger <xiayuxuan@live.com>"]

[tool.poetry.dependencies]
python = "^3.7"
appdirs = "1.4.4"
beautifulsoup4 = "4.9.3"
certifi = "2020.12.5"
chardet = "4.0.0"
click = "7.1.2"
colorama = "0.4.4"
decorator = "4.4.2"
html5lib = "1.1"
idna = "2.10"
importlib-metadata = "3.4.0"
isort = "5.7.0"
lazy-object-proxy = "1.4.3"
mccabe = "0.6.1"
mypy-extensions = "0.4.3"
pathspec = "0.8.1"
psutil = "5.8.0"
pyte = "0.8.0"
regex = "2020.11.13"
requests = "2.25.1"
selenium = "3.141.0"
soupsieve = "2.1"
toml = "0.10.2"
typed-ast = "1.4.2"
typing-extensions = "3.7.4.3"
urllib3 = "1.26.3"
wcwidth = "0.2.5"
webencodings = "0.5.1"
wrapt = "1.12.1"
zipp = "3.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
